# docling-pp-doc-layout

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  renovate.json
.github/workflows/: main.yml  publish.yml
src/docling_pp_doc_layout/: __init__.py  label_mapping.py  model.py  options.py  plugin.py
tests/: conftest.py  test_end_to_end.py  test_label_mapping.py  test_model.py  test_options.py  test_plugin.py  test_predict_layout.py
